# PyClangSerializer

./: .editorconfig  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  conanfile.txt  pip.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
cmake/: CodeGeneration.cmake  Conan.cmake  PyEnv.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  test_clang.py
example/: CMakeLists.txt
example/include/example/: example.hpp
example/src/: CMakeLists.txt  example-config.yaml  main.cpp  serialize.j2
include/example/: translation.h
src/example/: main.cpp
src/gk/source_index/: __main__.py  check_clang.py  config.py  main.py  model.py  parse_source.py  templating_tools.py
src/source_index/: __main__.py  _collect_translation._py  _utils._py  main.py  parse_source.py  source_model.py  templating_tools.py
tests/: _test_collect_translation_strings._py  conftest.py  test_model.py
