[metadata]
name = gk-serializer
version = 0.1 # TODO  attr: gk-serializer.VERSION
description = Distributed rendering with Blender
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]

zip_safe = False
include_package_data = True
install_requires =
    clang==6.0.0.2
package_dir=
    =src
packages=find:

[options.extras_require]
test =
    pytest
    flake8

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    collect_sources=source_index.main:main

[options.packages.find]
where = src
exclude =
    tests
    *.tests
    tests.*
    *.tests.*

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
max-complexity = 24
select = B,C,E,F,W,T4,B9

[black]
line-length = 120

[aliases]
test=pytest