[metadata]
name = gk-source-index
# TODO  attr: gk-serializer.VERSION
version = 0.1
description = Distributed rendering with Blender
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    clang==6.0.0.2
    more_itertools==8.12.0
    dataclasses_json==0.5.7
    PyYAML==6.0
	Jinja2==3.1.1
setup_requires =
	wheel
package_dir=
    =src
packages=find:

[options.extras_require]
test =
    pytest
    flake8

[options.entry_points]
console_scripts =
    generate-code=source_index.main:main
	check-clang=source_index.check_clang:main

[options.packages.find]
where = src
exclude =
    tests
    *.tests
    tests.*
    *.tests.*

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
max-complexity = 24
select = B,C,E,F,W,T4,B9

[black]
line-length = 120

[aliases]
test=pytest
