[metadata]
name = gk_source_index
version = 0.0.2
description = Source index and code generation with Jinja2 and Clang-index
long_description = file: Readme.MD
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
install_requires =
    Jinja2==3.1.1
    PyYAML==6.0
    clang==6.0.0.2
    dataclasses-json==0.5.7
    more-itertools==8.12.0
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools>=43.0.0
    wheel
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests
    *.tests
    tests.*
    *.tests.*

[options.entry_points]
console_scripts =
    generate-code=gk.source_index.main:main
    check-clang=gk.source_index.check_clang:main

[options.extras_require]
test =
    flake8
    pytest

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
max-complexity = 24
select = B,C,E,F,W,T4,B9

[tool:black]
line-length = 120

[aliases]
test = pytest
